--- a/style.css
+++ b/style.css
@@ -412,6 +412,8 @@ nav .right .links a:hover {
 
     .hero-section .headshot {
         width: 300px;
+        display: flex;
+        justify-content: center;
     }
 
     /* SECTION 4: Career */
